css/style.css
/* ... */
.home .first img {

	display: inline-block;

	padding-top: 15px;

}



.home .second {

	width: 860px;

	padding: 70px;

}



.home .second h1 {

	margin-bottom: 0.5em;

}



.home .second h3 {

	margin-bottom: 0.7em;

}



.home .third {

	width: 1000px;

	padding: 0em;

	display: flex;

}



.home .third div {

	background-color: white;

	width: 30%;

	padding: 0em 1%;

	display: inline-block;

	text-align: center;

	align-self: center;

}



.home .third img {

	display: inline-block;

	width: 70%;

	height: 500px;

}



.home .third .cms-content h4 {

	font-weight: 400;

}



.home .third .cms-content h4:nth-child(3), .home .third .cms-content h4:first-child {

	margin-top: 0.4em;

}



.home .fourth {

	position: relative;

	padding: 0;

	width: 1000px;

	height: 300px;

}



.home .fourth #google-maps {

	position: relative;

	height: 300px;

	width: 70%;

	display: inline-block;

	border: none;

}



.home .fourth div:nth-child(2) {

	width: 26%;

	display: inline-block;

	vertical-align: top;

	padding: 3em 2%;

	text-align: center;

}



.home .fourth h4 {

	margin-top: 0.75em;

}



.home .fourth p {

	margin: 0;

}

.2-button {
    left: 310px;
    background: rgba(217,214,209,0,0.9);
    width: 320px;
    padding: 0;
    border-radius: 5px;
}





/**

* DOCTORS

**/



.page-id-21 p {

	margin-top: 0.2em;

}



.page-id-21 #staff-info p {

	margin-top: 0.5em;

}



.page-id-21 section, .page-id-46 section {

	background-color: white;

	padding: 100px;

	width: 1000px;

	margin: 100px auto;

}



.page-id-21 #staff-info {

	width: 1000px;

	height: auto;

	margin: 50px auto 0;

	overflow: hidden;

	position: relative;

	z-index: 20;

	background-color: #fff;

	-webkit-box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);

	-moz-box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);

	box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);

	padding-bottom: 40px;

}



.page-id-21 #staff-info h4 {

	margin-top: 1em;

}



.page-id-21 #staff-info h2 {

	color: #5A867D;

}



.page-id-21 #staff-info h5:nth-child(2) {

	margin-top: 0.2em;

	font-weight: 700;

	font-size: 16px;

}





.page-id-21 #staff-info img {

	width: 350px;

	margin-top: 50px;

	margin-right: 50px;

	float: right;

}



.page-id-21 #staff-info .staff-content {

	float: right;

	width: 50%;

	padding: 0.5em 2em 0.5em 0.5em;

	margin-top: 50px;

}



.page-id-21 #staff-info span {

	font-weight: bold;

}



.page-id-21 .staff-grid {

	width: 700px;

	display: inline-block;

	vertical-align: top;

	font-size: 0;

}



	.page-id-21 .staff-member {

		cursor: pointer;

		display: inline-block;

		width: 26%;

		padding: 2%;

		margin-right: 3%;

		margin-top: 50px;

		font-size: 14px;

		-webkit-box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);

		-moz-box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);

		box-shadow: 7px 8px 5px 0px rgba(0,0,0,0.12);

	}



		.page-id-21 .staff-member img {

			width: 100%;

		}



		.page-id-21 .staff-member p, .page-id-21 .staff-member h4 {

			padding: 0 2%;

		}



		.page-id-21 .staff-member p:nth-child(2) {

			margin-top: 1em;

			font-weight: bold;

			font-size: 14px;

		}



		.page-id-21 .staff-member p:nth-child(3) {

			color: #80B7A2;

			margin: 0.5em 0;

			font-size: 12px;

		}



.page-id-21 .sidebar {

	margin-top: 50px;

}



/**

* SERVICES

**/



.page-id-46 .content, .page-id-91 .content, , .page-id-247 .content {

	margin-top: 50px;

}



.page-id-46 .content {

	margin-bottom: 20px;

}



.page-id-46 .content:nth-child(2) {

	margin-top: 20px;

}



.page-id-46 .page-heading, .page-id-91 .page-heading, .page-id-247 .page-heading {

	margin-bottom: 0.5em;

}



.page-id-46 .sub-heading, .page-id-91 .sub-heading, .page-id-247 .sub-heading {

	margin-bottom: 1em;

}



.page-id-46 .services-content, .page-id-91 .services-content, .page-id-247 .services-content {

	width: 60%;

	display: inline-block;

}



.page-id-46 .services-row, .page-id-91 .services-row, .page-id-247 .services-row {

	border-bottom: 1px solid #80B7A2;

	padding: 0.8em 0.5em 0.5em 0.5em;

	cursor: pointer;

}



.page-id-46 .services-row p, .page-id-91 .services-row p, .page-id-247 .services-row p {

	clear: both;

}



.page-id-46 .services-row span p:first-child, .page-id-91 .services-row span p:first-child, .page-id-247 .services-row span p:first-child {

	padding-top: 1em;

}



.page-id-46 .services-row span p:last-child, .page-id-91 .services-row span p:last-child, .page-id-247 .services-row span p:last-child {

	padding-bottom: 1em;

}



.page-id-46 .services-row h4, .page-id-91 .services-row h4, .page-id-247 .services-row h4 {

	color: #5A867D;

	float: left;	

	display: block;

	font-size: 20px;

	width: 85%;

}



.page-id-46 .services-row img, .page-id-91 .services-row img, .page-id-247 .services-row img {

	float: right;

	transition: -webkit-transform 0.5s, -ms-transform 0.5, transform 0.5s;



}





/**

* CONTACT

**/



.page-id-54 section {

	width: 700px;

	margin: 50px auto;

}



.page-id-54 .top-wrapper {

	width: 500px;

	background-color: #082622;

	color: white;

	padding: 75px 100px 100px 100px;

}



.page-id-54 .top-box {

	vertical-align: top;

	display: inline-block;

	width: 40%;

	padding: 5%;

}



.page-id-54 section h3 {

		font-size: 20px;

		margin-bottom: 0.5em;

		margin-top: 0.6em;

}



.page-id-54 .top-box h3 {

	padding-bottom: 0.5em;

	margin: 1.5em 0 0.5em 0;

	border-bottom: 2px solid white;

}



.page-id-54 #google-maps-contact {

	height: 350px;

	width: 65%;

	display: inline-block;

	border: none;

}



.page-id-54 .contact-content {

	width: 25%;

	padding: 35px 5%;

	background-color: white;

	height: 280px;

	display: inline-block;

	vertical-align: top;

	text-align: center;

}



.page-id-54 .contact-content p {

	margin: 0;

}





/**

* PATIENT

**/

.online h3 {
	text-align: center;
}

.online img {
	margin-top: 10px;
}

.page-id-61 .content {

	width: 850px;

	padding: 60px 250px 60px 100px;

}
/* ... */

